--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,25 @@
-version: '3'
-services: 
-    client:
-        image: node:stretch
-        command: sh -c "npm install && npm run serve"
-        environment: 
-            - NODE_ENV=development
-            - PORT=8080
-        ports: 
-            - '8000:8000'
-        working_dir: /root/client
-        volumes: 
-            - ./client:/root/client:cached
+version: "3"
+services:
+  client:
+    image: node:stretch
+    command: sh -c "npm install && npm run serve"
+    environment:
+      - NODE_ENV=development
+      - PORT=8080
+    ports:
+      - "8080:8080"
+    working_dir: /root/client
+    volumes:
+      - ./client:/root/client:cached
+
+  server:
+    image: node:stretch
+    command: sh -c "npm install && npm run dev"
+    environment:
+      - NODE_ENV=development
+      - PORT=5000
+    ports:
+      - "5000:5000"
+    working_dir: /root/server
+    volumes:
+      - ./server:/root/server:cached
