--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
 version: "3"
 services:
   client:
-    image: node:stretch
+    container_name: gran-client
+    image: node:alpine
     command: sh -c "npm install && npm run serve"
     environment:
       - NODE_ENV=development
@@ -11,9 +12,12 @@ services:
     working_dir: /root/client
     volumes:
       - ./client:/root/client:cached
+    depends_on:
+      - server
 
   server:
-    image: node:stretch
+    container_name: gran-server
+    image: node:alpine
     command: sh -c "npm install && npm run dev"
     environment:
       - NODE_ENV=development
