--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
@@ -19,6 +20,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
