--- a/client/package.json
+++ b/client/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "gran-finance-client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "lint-fix": "eslint --fix-dry-run --ext .ts src"
-  },
-  "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.6.4",
-    "jwt-decode": "^2.2.0",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0",
-    "vuex": "^3.1.2"
-  },
-  "devDependencies": {
-    "@types/jwt-decode": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-typescript": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-config-vuetify": "^0.6.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "typescript": "~3.7.4",
-    "vue-cli-plugin-eslint-config-vuetify": "0.0.3",
-    "vue-cli-plugin-vuetify": "^2.0.3",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0",
-    "vuex-module-decorators": "^0.16.1"
-  }
+	"name": "gran-finance-client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint",
+		"lint:fix": "eslint --fix-dry-run --ext .ts src"
+	},
+	"dependencies": {
+		"axios": "^0.19.2",
+		"core-js": "^3.6.4",
+		"jwt-decode": "^2.2.0",
+		"vue": "^2.6.10",
+		"vue-class-component": "^7.0.2",
+		"vue-property-decorator": "^8.3.0",
+		"vue-router": "^3.1.3",
+		"vuetify": "^2.1.0",
+		"vuex": "^3.1.2"
+	},
+	"devDependencies": {
+		"@types/jwt-decode": "^2.2.1",
+		"@typescript-eslint/eslint-plugin": "^2.28.0",
+		"@vue/cli-plugin-babel": "^4.1.0",
+		"@vue/cli-plugin-eslint": "^4.1.0",
+		"@vue/cli-plugin-typescript": "^4.1.0",
+		"@vue/cli-service": "^4.1.0",
+		"@vue/eslint-config-typescript": "^4.0.0",
+		"eslint": "^5.16.0",
+		"eslint-config-prettier": "^6.10.1",
+		"eslint-config-vuetify": "^0.6.0",
+		"eslint-plugin-prettier": "^3.1.3",
+		"eslint-plugin-vue": "^5.0.0",
+		"sass": "^1.19.0",
+		"sass-loader": "^8.0.0",
+		"typescript": "~3.7.4",
+		"vue-cli-plugin-eslint-config-vuetify": "0.0.3",
+		"vue-cli-plugin-vuetify": "^2.0.3",
+		"vue-template-compiler": "^2.6.10",
+		"vuetify-loader": "^1.3.0",
+		"vuex-module-decorators": "^0.16.1"
+	}
 }
