--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 services:
   client:
     container_name: gran-client
-    image: node:alpine
+    image: node:current
     command: sh -c "npm install && npm run serve"
     environment:
       NODE_ENV: development
@@ -19,13 +19,13 @@ services:
 
   server:
     container_name: gran-server
-    image: node:alpine
+    image: node:current
     command: sh -c "npm install && npm run dev"
     environment:
       NODE_ENV: development
       PORT: 5000
-      MONGODB_CONNECTION: mongodb://mongodb:27017
-      MONGODB_DATABASE: dev
+      MONGODB_CONNECTION: mongodb+srv://root:qEPE2aPtXL9bDvnY@fkzfinancecluster-e9zdx.mongodb.net
+      MONGODB_DATABASE: test
     ports:
       - 5000:5000
     working_dir: /root/server
@@ -33,19 +33,19 @@ services:
       - ./server:/root/server:cached
     networks:
       - appnetwork
-    depends_on:
-      - mongodb
+    # depends_on:
+    #   - mongodb
 
-  mongodb:
-    image: mongo
-    container_name: mongodb
-    volumes:
-      - ./data-node:/data/db
-    ports:
-      - 27017:27017
-    command: mongod --noauth
-    networks:
-      - appnetwork
+  # mongodb:
+  #   image: mongo
+  #   container_name: mongodb
+  #   volumes:
+  #     - ./data-node:/data/db
+  #   ports:
+  #     - 27017:27017
+  #   command: mongod --noauth
+  #   networks:
+  #     - appnetwork
 
 networks:
   appnetwork:
