--- a/server/.env.development
+++ b/server/.env.development
@@ -1,5 +1,5 @@
 MONGODB_USER=root
 MONGODB_PASSWORD=pass
-MONGODB_HOST=mongodb://0.0.0.0:27017
+MONGODB_HOST=0.0.0.0:27017
 MONGODB_DATABASE=dev
-MONGODB_PROTOCOL=mongodb://
+MONGODB_CONNECTION=mongodb://root:pass@0.0.0.0:27017/dev
