--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,6 @@ services:
     environment:
       NODE_ENV: development
       PORT: 5000
-      MONGODB_CONNECTION: mongodb+srv://root:qEPE2aPtXL9bDvnY@fkzfinancecluster-e9zdx.mongodb.net
-      MONGODB_DATABASE: test
     ports:
       - 5000:5000
     working_dir: /root/server
@@ -33,19 +31,19 @@ services:
       - ./server:/root/server:cached
     networks:
       - appnetwork
-    # depends_on:
-    #   - mongodb
+    depends_on:
+      - mongodb
 
-  # mongodb:
-  #   image: mongo
-  #   container_name: mongodb
-  #   volumes:
-  #     - ./data-node:/data/db
-  #   ports:
-  #     - 27017:27017
-  #   command: mongod --noauth
-  #   networks:
-  #     - appnetwork
+  mongodb:
+    image: mongo
+    container_name: mongodb
+    volumes:
+      - ./data-node:/data/db
+    ports:
+      - 27017:27017
+    command: mongod --noauth
+    networks:
+      - appnetwork
 
 networks:
   appnetwork:
