--- a/.github/workflows/master_gran-server.yml
+++ b/.github/workflows/master_gran-server.yml
@@ -33,4 +33,4 @@ jobs:
           app-name: "gran-server"
           slot-name: "production"
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_1db1e6b9c3ef402cb39b9bc1bc5af007 }}
-          package: ./server
+          package: ./server/
