--- a/.github/workflows/master_gran-server.yml
+++ b/.github/workflows/master_gran-server.yml
@@ -32,5 +32,6 @@ jobs:
         with:
           app-name: "gran-server"
           slot-name: "production"
+          startup-command: "npm start"
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_1db1e6b9c3ef402cb39b9bc1bc5af007 }}
           package: ./server/
