--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,6 +7,7 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+ENV NODE_ENV=production
 RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
