Mudança no dockerfile do servidor

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,6 @@ RUN mkdir -p /home/node/server
 WORKDIR /home/node/server
 
 COPY package*.json ./
-# RUN npm install'
 ENV NODE_ENV=production
 RUN npm ci
 
@@ -13,8 +12,8 @@ RUN npm run build
 
 USER node
 
-FROM node:lts-alpine as production-stage
-COPY --from=build-stage /home/node/server/dist /home/node/server/
-COPY --from=build-stage /home/node/server/node_modules /home/node/server/
+ENV PORT=8080
 
-CMD ["node", "index.js"]
+EXPOSE 8080
+
+CMD ["node", "dist/index.js"]
