--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,8 @@
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.35",
     "@types/node": "^13.13.5",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
     "babel-eslint": "^10.0.1",
