--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "validator": "^13.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.35",
