--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon src/index.ts",
+    "dev": "DEBUG=app:* nodemon src/index.ts",
     "start": "node dist/index.js",
     "seed": "sucrase-node src/seed/index.ts"
   },
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "is-empty": "^1.2.0",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.35",
     "@types/node": "^13.13.5",
