--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 		"axios": "^0.19.2",
 		"core-js": "^3.6.4",
 		"jwt-decode": "^2.2.0",
+		"v-currency-field": "^3.1.1",
 		"vue": "^2.6.10",
 		"vue-class-component": "^7.0.2",
 		"vue-property-decorator": "^8.3.0",
