--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,1 @@
-MONGODB_USER=root
-MONGODB_PASSWORD=pass
-MONGODB_HOST=0.0.0.0:27017
-MONGODB_DATABASE=dev
-MONGODB_CONNECTION=mongodb://0.0.0.0:27017/dev
+MONGODB_CONNECTION=mongodb://0.0.0.0:27017/test
