--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon src/index.ts",
+    "dev": "DEBUG=app:* nodemon src/index.ts",
     "start": "node dist/index.js",
+    "test": "DEBUG=app:* jest --watch --runInBand --detectOpenHandles",
     "seed": "sucrase-node src/seed/index.ts"
   },
   "repository": {
@@ -28,7 +29,7 @@
     "express": "^4.16.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.4",
+    "mongoose": "^5.10.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "validator": "^13.0.0"
@@ -38,19 +39,25 @@
     "@types/cors": "^2.8.6",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
-    "@types/mongoose": "^5.5.35",
+    "@types/jest": "^26.0.14",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^13.13.5",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^26.5.3",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "sucrase": "^3.11.0",
-    "typescript": "^3.7.4"
+    "supertest": "^5.0.0",
+    "ts-jest": "^26.4.1",
+    "typescript": "^3.9.7"
   }
 }
