--- a/.github/workflows/master_gran-server.yml
+++ b/.github/workflows/master_gran-server.yml
@@ -3,12 +3,27 @@
 
 # name: Build and deploy Node.js app to Azure Web App - gran-server
 
-# on:
-#   push:
-#     branches:
-#       - master
+on:
+  push:
+    branches:
+      - master
 
-# jobs:
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Set up Node.js version
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+      - name: npm install, build, and test
+        run: |
+          cd server
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+
 #   build-and-deploy:
 #     runs-on: ubuntu-latest
 
