--- a/.github/workflows/master_gran-server.yml
+++ b/.github/workflows/master_gran-server.yml
@@ -22,7 +22,8 @@ jobs:
           cd server
           npm install
           npm run build --if-present
-          npm run test --if-present
+
+#         npm run test --if-present
 
 #   build-and-deploy:
 #     runs-on: ubuntu-latest
