--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,2 @@
-MONGODB_CONNECTION=mongodb+srv://root:qEPE2aPtXL9bDvnY@fkzfinancecluster-e9zdx.mongodb.net/test
-MONGO_ALTERNATE=mongodb://0.0.0.0:27017/dev
+MONGODB_CONNECTION=mongodb://0.0.0.0:27017/dev
 DEBUG=app:*
