--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -40,6 +41,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/jest": "^26.0.14",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^13.13.5",
     "@types/passport": "^1.0.4",
