--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,9 +2,13 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "outDir": "./dist",
-    "target": "ES5",
+    "target": "ES6",
     "module": "CommonJS"
   },
-  "include": ["./src/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
