--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,7 +11,10 @@ ENV NODE_ENV=production
 RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
+
+RUN rm -rf /usr/share/nginx/html/*
 COPY --from=build-stage /root/client/dist /usr/share/nginx/html
+COPY .nginx/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
