--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
 VUE_APP_DEBUG=false
-VUE_APP_SERVER_HOST=https://gran-server.azurewebsites.net
+VUE_APP_SERVER_HOST=https://gran-server-1.azurewebsites.net
