--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
 		"lint": "vue-cli-service lint",
-		"lint:fix": "eslint --fix-dry-run --ext .ts src"
+		"lint:fix": "eslint --fix-dry-run --ext .ts src",
+		"firebase:deploy": "vue-cli-service build && firebase deploy"
 	},
 	"dependencies": {
 		"axios": "^0.19.2",
