--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "expo": "~36.0.0",
     "expo-font": "~8.0.0",
     "native-base": "2.13.8",
@@ -17,9 +17,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.6.0",
-    "react-native-reanimated": "^1.7.0",
+    "react-native-reanimated": "^2.2.0",
     "react-native-screens": "^2.4.0",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.17.1",
     "vue-native-core": "0.1.4",
     "vue-native-helper": "0.1.4",
     "vue-native-router": "^0.1.1"
