--- a/.github/workflows/master_gran-server.yml
+++ b/.github/workflows/master_gran-server.yml
@@ -20,7 +20,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           cd server
-          npm install
+          npm ci --production
           npm run build --if-present
 
 #         npm run test --if-present
