--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,6 +26,7 @@
 on:
   release:
     types: [created]
+  workflow_dispatch:
 
 name: Deploy to Amazon ECS
 
@@ -69,8 +70,9 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: server/.aws/task-definition.json
-          container-name: gran-container
+          working-directory: server
+          task-definition: .aws/task-definition.json
+          container-name: gran-cr
           image: ${{ steps.build-image.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
