--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -71,7 +71,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: server/.aws/task-definition.json
-          container-name: gran-cr
+          container-name: gran-server
           image: ${{ steps.build-image.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
